--- a/BMW/Venetian.html
+++ b/BMW/Venetian.html
@@ -2143,22 +2143,22 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 
 /*#/#*//*#i2.i3.positioning.css:positioning/base/css.1*/
-#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 333px; height: 258px;
-        -ms-transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -9px) rotate(0deg);
+#i2 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 350px;
+        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 85px; height: 38px;
-        -ms-transform: translate(0, 0) translate(232px, 442px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(232px, 442px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(232px, 442px) rotate(0deg);
-        transform: translate(0, 0) translate(232px, 442px) rotate(0deg);
+#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 47px; height: 47px;
+        -ms-transform: translate(0, 0) translate(248px, 548px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(248px, 548px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(248px, 548px) rotate(0deg);
+        transform: translate(0, 0) translate(248px, 548px) rotate(0deg);
 }
 /*#/#*//*#slice.css:slice/globalcss*/
 
@@ -2219,65 +2219,66 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     visibility: hidden !important;
 }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
-#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 100px;
-        -ms-transform: translate(0, 0) translate(2px, 341px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(2px, 341px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(2px, 341px) rotate(0deg);
-        transform: translate(0, 0) translate(2px, 341px) rotate(0deg);
+#i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 120px;
+        -ms-transform: translate(0, 0) translate(0px, 425px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 425px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 425px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 425px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
-#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 175px; height: 49px;
-        -ms-transform: translate(0, 0) translate(73px, 385px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(73px, 385px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(73px, 385px) rotate(0deg);
-        transform: translate(0, 0) translate(73px, 385px) rotate(0deg);
+#i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 168px; height: 47px;
+        -ms-transform: translate(0, 0) translate(66px, 491px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(66px, 491px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(66px, 491px) rotate(0deg);
+        transform: translate(0, 0) translate(66px, 491px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 65px;
-        -ms-transform: translate(0, 0) translate(9px, 252px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 252px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 252px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 252px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 367px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 367px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 367px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 367px) rotate(0deg);
 }
-/*#/#*//*#i65.text.css:text/base/css*/
-#i65 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i65.i66.positioning.css:positioning/base/css.2*/
-#i65 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 290px; height: 38px;
-        -ms-transform: translate(0, 0) translate(15px, 315px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(15px, 315px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(15px, 315px) rotate(0deg);
-        transform: translate(0, 0) translate(15px, 315px) rotate(0deg);
+/*#/#*//*#i80.shape.css:shape/base/css*/
+#i80 { background-color: #dedede; opacity: 0.00;
+}
+/*#/#*//*#i80.i81.positioning.css:positioning/base/css.2*/
+#i80 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 100%; height: 100%;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i68.image.css:image/base/css*/
 #i68 { opacity: 1; }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(9px, 450px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(9px, 450px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(9px, 450px) rotate(0deg);
-        transform: translate(0, 0) translate(9px, 450px) rotate(0deg);
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
+        -ms-transform: translate(0, 0) translate(9px, 571px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 571px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 571px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 571px) rotate(0deg);
 }
 /*#/#*//*#i70.image.css:image/base/css*/
 #i70 { opacity: 1; }
 /*#/#*//*#i70.i71.positioning.css:positioning/base/css.2*/
-#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 23px;
-        -ms-transform: translate(0, 0) translate(38px, 450px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(38px, 450px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(38px, 450px) rotate(0deg);
-        transform: translate(0, 0) translate(38px, 450px) rotate(0deg);
+#i70 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
+        -ms-transform: translate(0, 0) translate(41px, 571px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(41px, 571px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(41px, 571px) rotate(0deg);
+        transform: translate(0, 0) translate(41px, 571px) rotate(0deg);
 }
 /*#/#*//*#i72.image.css:image/base/css*/
 #i72 { opacity: 1; }
 /*#/#*//*#i72.i73.positioning.css:positioning/base/css.2*/
-#i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 22px; height: 22px;
-        -ms-transform: translate(0, 0) translate(68px, 450px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(68px, 450px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(68px, 450px) rotate(0deg);
-        transform: translate(0, 0) translate(68px, 450px) rotate(0deg);
+#i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
+        -ms-transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
+        transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2288,29 +2289,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/ZBgcAw2.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/xvT4MQ1.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/P47FSCc.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/bY2ELVK.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/rIwrInw.png"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/Ahh14wQ.jpg"/>
+<img id="i44" src="https://i.imgur.com/2WUParA.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/BWUBg8Y.png"/>
+<img id="i16" src="https://i.imgur.com/peyTtT2.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/YQ3iHws.png"/>
+<img id="i46" src="https://i.imgur.com/LhdUffz.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">Amamos a nuestras mascotas. Pero ¿Que tan bien las conocemos realmente?</div>
-<!--#/#--><!--#i65.text.html:text/html-->
-<div id="i65">¡Ven a verla a Cinemex Cuauhtémoc!</div>
+<div id="i63">Para los que llevan la aventura en la sangre.</div>
+<!--#/#--><!--#i80.shape.html:shape/html-->
+<div id="i80"></div>
 <!--#/#--><!--#i68.image.html:image/html-->
-<img id="i68" src="https://i.imgur.com/aWe1A4G.png"/>
+<img id="i68" src="https://i.imgur.com/210k9Dl.png"/>
 <!--#/#--><!--#i70.image.html:image/html-->
-<img id="i70" src="https://i.imgur.com/ct3Z8bp.png"/>
+<img id="i70" src="https://i.imgur.com/zp1Ua8P.png"/>
 <!--#/#--><!--#i72.image.html:image/html-->
-<img id="i72" src="https://i.imgur.com/ecFOGYd.png"/>
+<img id="i72" src="https://i.imgur.com/gDjjL45.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2378,7 +2379,7 @@ var el = document.getElementById('i44');
 
 el.addEventListener('click', function(e){
     /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2406,8 +2407,21 @@ if ('click' === 'click') {
    
 /*#/#*//*#i63.i64.positioning.js:positioning/base/js.2*/
 bmShow('i63');
-/*#/#*//*#i65.i66.positioning.js:positioning/base/js.2*/
-bmShow('i65');
+/*#/#*//*#i80.i81.positioning.js:positioning/base/js.2*/
+bmShow('i80');
+/*#/#*//*#i80.i82.actions.js:actions/base/js.1*/
+/* Name: On Click; */
+var el = document.getElementById('i80');
+
+el.addEventListener('click', function(e){
+    /*#i82.i83.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/S7ZHFegxFjJ2'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+
+if ('click' === 'click') {
+    el.style.cursor = 'pointer';
+}
 /*#/#*//*#i68.image.js:image/base/js*/
 
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
@@ -2418,7 +2432,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i74.i75.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u= https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/S7ZHFegxFjJ2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2435,7 +2449,7 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i76.i77.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://plus.google.com/share?url= https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2452,7 +2466,7 @@ var el = document.getElementById('i72');
 
 el.addEventListener('click', function(e){
     /*#i78.i79.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status= https://goo.gl/maps/4RMdqPsSKi22'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/S7ZHFegxFjJ2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2480,48 +2494,48 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: ZBgcAw2.jpg; fileId: ; sourceTypeId: externalUrl;
+name: xvT4MQ1.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: P47FSCc.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: bY2ELVK.jpg; fileId: ; sourceTypeId: externalUrl;
+name: rIwrInw.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: Ahh14wQ.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 2WUParA.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
-name: BWUBg8Y.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: peyTtT2.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":false}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i46.image.meta:image/meta*/
-name: YQ3iHws.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: LhdUffz.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: Amamos a nuestras mascotas. Pero ¿Que tan bien las conocemos realmente?; customName: false;
+name: Para los que llevan la aventura en la sangre.; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i65.text.meta:text/meta*/
-name: ¡Ven a verla a Cinemex Cuauhtémoc!; customName: false;
-/*#/#*//*#i65.i66.positioning.meta:positioning/meta.2*/
+/*#/#*//*#i80.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i80.i81.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.image.meta:image/meta*/
-name: aWe1A4G.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: 210k9Dl.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i70.image.meta:image/meta*/
-name: ct3Z8bp.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: zp1Ua8P.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i70.i71.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i72.image.meta:image/meta*/
-name: ecFOGYd.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: gDjjL45.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i72.i73.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
