--- a/BMW/Venetian.html
+++ b/BMW/Venetian.html
@@ -2275,7 +2275,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i72 { opacity: 1; }
 /*#/#*//*#i72.i73.positioning.css:positioning/base/css.2*/
 #i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
+        -ms-transform: translate(0, 0) translagte(73px, 571px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
         transform: translate(0, 0) translate(73px, 571px) rotate(0deg);
@@ -2291,7 +2291,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/xvT4MQ1.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/P47FSCc.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/h0RV5jy.png"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
 <dataimg id="i6" src="https://i.imgur.com/rIwrInw.png"></dataimg>
 <!--#/#-->
