--- a/BMW/Venetian.html
+++ b/BMW/Venetian.html
@@ -2379,7 +2379,7 @@ var el = document.getElementById('i44');
 
 el.addEventListener('click', function(e){
     /*#i48.i49.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    
 /*#/#*/
 });
 
@@ -2449,7 +2449,7 @@ var el = document.getElementById('i70');
 
 el.addEventListener('click', function(e){
     /*#i76.i77.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://goo.gl/maps/S7ZHFegxFjJ2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
