--- a/BMW/Venetian.html
+++ b/BMW/Venetian.html
@@ -2301,7 +2301,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/peyTtT2.png"/>
 <!--#/#--><!--#i46.image.html:image/html-->
-<img id="i46" src="https://i.imgur.com/LhdUffz.png"/>
+<img id="i46" src="https://i.imgur.com/2jCtQHT.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
 <div id="i63">Para los que llevan la aventura en la sangre.</div>
 <!--#/#--><!--#i80.shape.html:shape/html-->
