--- a/Kipling/hover-text-big2.html
+++ b/Kipling/hover-text-big2.html
@@ -103,13 +103,14 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/Q625oc5.gif">
+                <img src="https://i.imgur.com/vle8NF5.gif">
             </div>
 
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/7Y2knfD.png"> </a></div>
+                <a href="https://goo.gl/maps/DD46F1dFiuM2" target="_blank"  style="color: none; text-decoration: none;">
+                <img src="https://i.imgur.com/wbVeY2k.png"> </a></div>
 
              
 
