--- a/Kipling/hover-text-big3.html
+++ b/Kipling/hover-text-big3.html
@@ -109,7 +109,7 @@
 
             <div class="details">
                 <div style="margin-left: -30px; margin-top:-60px; cursor: pointer;">
-                <a href="https://goo.gl/maps/zub4BEmM1m92" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/i659kI1.png"> </a></div>
+                <a href="https://goo.gl/maps/zub4BEmM1m92" target="_blank"  style="color: none; text-decoration: none;"><img src="https://i.imgur.com/tft1uII.png"> </a></div>
 
              
 
