--- a/Kipling/hover-text-big2.html
+++ b/Kipling/hover-text-big2.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/vle8NF5.gif">
+                <img src="https://i.imgur.com/2hYbUhD.gif">
             </div>
 
 
