--- a/Kipling/hover-text-big3.html
+++ b/Kipling/hover-text-big3.html
@@ -103,7 +103,7 @@
 
             <div class="imgBx">
                 
-                <img src="https://i.imgur.com/PTY0VXO.gif">
+                <img src="https://i.imgur.com/zXfXCqS.gif">
             </div>
 
 
