--- a/H&M Isla Merida/Venetian.html
+++ b/H&M Isla Merida/Venetian.html
@@ -2228,7 +2228,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 16px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: Arial, Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
 #i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 303px; height: 52px;
         -ms-transform: translate(0, 0) translate(9px, 316px) rotate(0deg);
@@ -2283,6 +2283,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
 }
+/*#/#*//*#i97.image.css:image/base/css*/
+#i97 { opacity: 1; }
+/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
+#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 310px;
+        -ms-transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2300,11 +2309,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/jUmq202.jpg"/>
+<img id="i44" src="https://i.imgur.com/HWy7spb.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/ViMLmas.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
-<div id="i63">¡¡Celebra con nosotros nuestra nueva tienda H&M en Forum Cuernavaca!!</div>
+<div id="i63">¡¡Celebra con nosotros nuestra nueva tienda H&M La Isla Mérida!!</div>
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i73.shape.html:shape/html-->
@@ -2315,6 +2324,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i83" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i85.image.html:image/html-->
 <img id="i85" src="https://i.imgur.com/YN2Vf5g.png"/>
+<!--#/#--><!--#i97.image.html:image/html-->
+<img id="i97" src="https://i.imgur.com/eTTPZFU.jpg"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2396,7 +2407,7 @@ var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/Uo15jpoxB262'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2407,13 +2418,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
 bmShow('i81');
-/*#/#*//*#i81.i87.actions.js:actions/base/js.1*/
+/*#/#*//*#i81.i99.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
-    /*#i87.i88.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i99.i100.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2424,13 +2435,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
 bmShow('i83');
-/*#/#*//*#i83.i89.actions.js:actions/base/js.1*/
+/*#/#*//*#i83.i103.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
-    /*#i89.i90.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2441,19 +2452,23 @@ if ('click' === 'click') {
 
 /*#/#*//*#i85.i86.positioning.js:positioning/base/js.2*/
 bmShow('i85');
-/*#/#*//*#i85.i91.actions.js:actions/base/js.1*/
+/*#/#*//*#i85.i101.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i85');
 
 el.addEventListener('click', function(e){
-    /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i101.i102.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
+/*#/#*//*#i97.image.js:image/base/js*/
+
+/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
+bmShow('i97');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2483,7 +2498,7 @@ name: omyIvFm.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
-name: jUmq202.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+name: HWy7spb.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i44.i45.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":false}/*!*/;
@@ -2493,7 +2508,7 @@ customName: false;
 /*#/#*//*#i46.i47.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i63.text.meta:text/meta*/
-name: celebra con nosotros nuestra nueva tienda H&M en Forum Cuernavaca.; customName: false;
+name: ¡¡Celebra con nosotros nuestra nueva tienda H&M La Isla Mérida!!; customName: false;
 /*#/#*//*#i63.i64.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i68.shape.meta:shape/meta*/
@@ -2519,4 +2534,9 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i85.i86.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i97.image.meta:image/meta*/
+name: eTTPZFU.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*/--><!--#/#-->
