--- a/office depot/FijoPeq1.html
+++ b/office depot/FijoPeq1.html
@@ -79,7 +79,7 @@
 
         .value_wrapper.size_320x480 {
             width: 300px;
-            height: 600px;
+            height: 250px;
         }
 
         .value_wrapper.size_320x50 {
@@ -99,7 +99,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/xOj3vyc.png");
+            background: url("https://i.imgur.com/xrd1YCd.png");
             background-size: cover;
         }
 
