--- a/H&M Isla Merida/Venetian.html
+++ b/H&M Isla Merida/Venetian.html
@@ -2283,15 +2283,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
         transform: translate(0, 0) translate(65px, 452px) rotate(0deg);
 }
-/*#/#*//*#i97.image.css:image/base/css*/
-#i97 { opacity: 1; }
-/*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
-#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 310px;
-        -ms-transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -10px) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2301,7 +2292,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/cLPV9tX.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/eTTPZFU.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/THZBWfN.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
@@ -2324,8 +2315,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <img id="i83" src="https://i.imgur.com/ObtrzfY.png"/>
 <!--#/#--><!--#i85.image.html:image/html-->
 <img id="i85" src="https://i.imgur.com/YN2Vf5g.png"/>
-<!--#/#--><!--#i97.image.html:image/html-->
-<img id="i97" src="https://i.imgur.com/eTTPZFU.jpg"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2441,7 +2430,7 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i103.i104.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado  https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/2oXXCazozDU2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2465,10 +2454,6 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i97.image.js:image/base/js*/
-
-/*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
-bmShow('i97');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2490,13 +2475,13 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: cLPV9tX.jpg; fileId: ; sourceTypeId: externalUrl;
+name: eTTPZFU.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: THZBWfN.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
 name: omyIvFm.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
-data: /*!*/{}/*!*/;
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
 name: HWy7spb.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -2534,9 +2519,4 @@ name: YN2Vf5g.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i85.i86.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i97.image.meta:image/meta*/
-name: eTTPZFU.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":false}/*!*/;
 /*#/#*/--><!--#/#-->
