--- a/Kipling/Cube3.html
+++ b/Kipling/Cube3.html
@@ -754,7 +754,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/0NKi3Uv.png"/>
+<img id="i130" src="https://i.imgur.com/S7Ga5Yd.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -776,7 +776,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i234.image.html:image/html-->
-<img id="i234" src="https://i.imgur.com/aGZSDqG.png"/>
+<img id="i234" src="https://i.imgur.com/ESrhPiy.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
