--- a/H&M Isla Merida/fade-hover3.html
+++ b/H&M Isla Merida/fade-hover3.html
@@ -83,7 +83,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/FL3FONj.jpg");
+            background: url("https://i.imgur.com/1YAWi6d.jpg");
             background-size: cover;
             
 
