--- a/H&M Isla Merida/fade-completo.html
+++ b/H&M Isla Merida/fade-completo.html
@@ -97,7 +97,7 @@
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/b66lLTA.jpg");
+            background: url("https://i.imgur.com/leUqOZq.jpg");
             background-size: cover;
           
         }
