--- a/H&M Marzo/fade-completo.html
+++ b/H&M Marzo/fade-completo.html
@@ -83,7 +83,7 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/HHVUaiU.jpg");
+            background: url("https://i.imgur.com/vlYl5nq.jpg");
             background-size: cover;
             
 
